Fri Feb 27 09:26:17 UTC 2009  Olli Savia  <ops@iki.fi>

        * tao/Compression/bzip2/Bzip2Compressor.cpp:
          Added #include "tao/GIOP_Message_State.h" to pull
          TAO_GIOP_MESSAGE_HEADER_LEN.

Fri Feb 27 08:36:13 UTC 2009  Olli Savia  <ops@iki.fi>

        * examples/AMI/FL_Callback/Progress_i.h:
        * examples/AMI/FL_Callback/Progress_i.cpp:
        * examples/AMI/FL_Callback/progress.cpp:
        * tests/FL_Cube/client.cpp:
        * tests/FL_Cube/server.cpp:
        * tests/FL_Cube/test_i.h:
          Fixed includes.

Fri Feb 27 07:13:43 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3553_Regression/Bug_3553_Regression_client.cpp:
        * tests/Bug_3553_Regression/Bug_3553_Regression_server.cpp:
          Resolved unicode compiler error.

Thu Feb 26 15:04:43 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/Xt_Stopwatch/Client.h:
        * tests/Xt_Stopwatch/server.cpp:
          Updated includes (XtResource_Loader.h has been moved).

Thu Feb 26 14:26:25 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/PortableServer_include.pidl:
          Removed old comments

Thu Feb 26 12:23:25 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.cpp:
          Updated layout of debug message

        * ace/TAO_Internal.cpp:
          Pass 0 as default logger key, makes it easier to check in ACE
          whether we have set an own key or noet

Thu Feb 26 12:08:25 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3597_Regression/Bug_3597_Regression.mpc:
        * tests/Bug_3597_Regression/run_test.pl:
        * tests/Bug_3597_Regression/server.cpp:
          Added a new regression test for bugzilla 3597, the
          -ORBServiceConfigLoggerKey is broken and doesn't work

Thu Feb 26 11:14:25 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * Bug_3553_Regression:
        * Bug_3553_Regression/Bug_3553_Regression_client.cpp: